feat: 토큰에서 역할을 읽어서 authentication에 저장